<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_small"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="20dp"
        android:hint="Name"
        android:paddingLeft="12dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="10dp"
        android:hint="Email"
        android:paddingLeft="12dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:paddingLeft="12dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>




        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What are your interests?"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/edt_pass"
            android:paddingTop="10dp"
            android:layout_marginLeft="8dp"/>

        <RadioButton
            android:id="@+id/movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@id/title"
            android:layout_marginLeft="5dp"/>

        <RadioButton
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@id/movies"
            android:layout_marginLeft="5dp"/>

        <RadioButton
            android:id="@+id/cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycling"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@id/music"
            android:layout_marginLeft="5dp"/>

        <RadioButton
            android:id="@+id/swimming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swimming"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@id/cycling"
            android:layout_marginLeft="5dp"/>

        <RadioButton
            android:id="@+id/dancing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dancing"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@id/swimming"
            android:layout_marginLeft="5dp"/>



    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dancing"
        android:text="Sign Up"
        android:background="@drawable/btn_background"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"/>

</RelativeLayout>